src/test/compile-fail/static-assert.rs
#[static_assert]
static a: bool = false; //~ ERROR static assertion failed

fn main() {
}
